[package]
name = "dyper"
authors = ["Lukas Denk"]
version = "1.0.0"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_float = "0.1.0"
dashmap = { version = "5.4.0", features = ["rayon"] }
rayon = "1.7.0"
tokio = { version = "1.26.0", features = ["full"] }
futures = "0.3"
clap = { version = "4.2.1", features = ["derive", "cargo"] }

rand = "0.8.4"